[package]
name = "trollbox"
version = "0.1.0"
authors = ["Zelly Snyder <zelly@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "*"
serde_json = "1.0"
serde = { version = "1.0.117", features = ["derive"] }
sha2 = "0.9.1"
