[package]
name = "trollbox"
version = "0.1.0"
authors = ["Zelly Snyder <zelly@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = { version = "*", features = ["ssl"] }
serde_json = "1.0"
serde = { version = "1.0.117", features = ["derive"] }
sha2 = "0.9.1"
base64 = "0.13.0"
openssl = "0.10.30"
env_logger = "0.6.1"
log = "0.4.11"
lockfree = "0.5.1"
mio-extras = "2.0.6"
uuid = { version = "0.8", features = ["v4"] }